--- a/be-photosi/be-photosi-api/be-photosi-api.csproj
+++ b/be-photosi/be-photosi-api/be-photosi-api.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Handlers\Command\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
