--- a/.github/workflows/main_yes-orders.yml
+++ b/.github/workflows/main_yes-orders.yml
@@ -27,7 +27,8 @@ jobs:
         working-directory: yes-order/yes-order-api/
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish yes-order.api.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        working-directory: yes-order/yes-order-api/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
